squash diff of origin/22.10.x and origin/main ahead of 22.10.1 burn-in alpha release (#4661)
Signed-off-by: garyschulte <garyschulte@gmail.com>